--- a/example/src/main/res/layout/activity_login.xml
+++ b/example/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
         android:layout_marginEnd="55dp"
         android:fontFamily="@font/comfortaa"
         android:gravity="center"
-        android:text="KARPA OFICIAL"
+        android:text="Malvinas Go"
         android:textColor="#FFF"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
